--- a/repl.ipynb
+++ b/repl.ipynb
@@ -2,6 +2,59 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "92f4d38b",
+   "metadata": {},
+   "source": [
+    "# Setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "9e5b10b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cs336_basics.bpe import train_bpe_tokenizer\n",
+    "from cs336_basics.io_utils import save_pickle, load_pickle\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fc140d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "os.cpu_count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6d79a72",
+   "metadata": {},
+   "source": [
+    "# REPL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c9aa293f",
    "metadata": {},
    "source": [
@@ -242,193 +295,103 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "969fccad",
+   "cell_type": "markdown",
+   "id": "e889e740",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import regex as re\n",
-    "from collections import Counter\n",
-    "\n",
-    "type TokenCounter = dict[tuple[bytes], int]\n",
-    "\n",
-    "\n",
-    "def merge_tokens(cur_tokens: TokenCounter, pair_counts: TokenCounter) -> tuple[TokenCounter, bytes]:\n",
-    "    # Find the most frequent pair\n",
-    "    best_pair = max(pair_counts, key=lambda pair: (pair_counts[pair], pair))\n",
-    "    new_token = best_pair[0] + best_pair[1]\n",
-    "\n",
-    "    def dec_(pair: tuple[bytes], count: int):\n",
-    "        pair_counts[pair] -= count\n",
-    "        if pair_counts[pair] == 0:\n",
-    "            del pair_counts[pair]\n",
-    "\n",
-    "    new_tokens: TokenCounter = Counter()\n",
-    "    for tokens, count in cur_tokens.items():\n",
-    "        # Replace occurrences of best_pair with new_token\n",
-    "        new_sequence: list[bytes] = []\n",
-    "        i = 0\n",
-    "        while i < len(tokens):\n",
-    "            if i < len(tokens) - 1 and (tokens[i], tokens[i + 1]) == best_pair:\n",
-    "                new_sequence.append(new_token)\n",
-    "\n",
-    "                # Update pair counts for adjacent tokens\n",
-    "\n",
-    "                if i > 0 and (prev_token := tokens[i - 1],):\n",
-    "                    pair_counts[(prev_token, new_token)] += count\n",
-    "                    dec_((prev_token, best_pair[0]), count)\n",
-    "\n",
-    "                if i + 2 < len(tokens) and (next_token := tokens[i + 2],):\n",
-    "                    pair_counts[(new_token, next_token)] += count\n",
-    "                    dec_((best_pair[1], next_token), count)\n",
-    "\n",
-    "                i += 2\n",
-    "            else:\n",
-    "                new_sequence.append(tokens[i])\n",
-    "                i += 1\n",
-    "        new_tokens[tuple(new_sequence)] += count\n",
-    "\n",
-    "    del pair_counts[best_pair]\n",
-    "    return new_tokens, new_token\n",
-    "\n",
-    "\n",
-    "def train_bpe_tokenizer(text: str, num_merges: int = 1000, debug: bool = False):\n",
-    "    vocab = [\"<|endoftext|>\".encode(\"utf-8\")] + [k.to_bytes() for k in range(256)]\n",
-    "\n",
-    "    # pre-tokenization\n",
-    "    PAT = r\"\"\"'(?:[sdmt]|ll|ve|re)| ?\\p{L}+| ?\\p{N}+| ?[^\\s\\p{L}\\p{N}]+|\\s+(?!\\S)|\\s+\"\"\"\n",
-    "    pre_tokens: TokenCounter = Counter()\n",
-    "    for match in re.finditer(PAT, text):\n",
-    "        pre_tokens[tuple(b.to_bytes() for b in match.group(0).encode(\"utf-8\"))] += 1\n",
-    "\n",
-    "    pair_counts: TokenCounter = Counter()\n",
-    "    for tokens, count in pre_tokens.items():\n",
-    "        for i in range(len(tokens) - 1):\n",
-    "            pair_counts[(tokens[i], tokens[i + 1])] += count\n",
-    "\n",
-    "    cur_tokens = pre_tokens\n",
-    "    for iter in range(num_merges):\n",
-    "        if not cur_tokens:\n",
-    "            print(\"[WARN] No more pairs to merge.\")\n",
-    "            break\n",
-    "        if debug:\n",
-    "            print(\"---\")\n",
-    "            print(f\"Current pairs:\")\n",
-    "            display(pair_counts)\n",
-    "\n",
-    "        cur_tokens, new_token = merge_tokens(cur_tokens, pair_counts)\n",
-    "        vocab.append(new_token)\n",
-    "\n",
-    "        if debug:\n",
-    "            print(f\"Merge {iter + 1}/{num_merges}: {new_token.decode('utf-8')}\")\n",
-    "    return vocab\n",
-    "\n",
-    "\n",
-    "test_texts = \"\"\"\n",
-    "low low low low low\n",
-    "lower lower widest widest widest\n",
-    "newest newest newest newest newest newest\n",
-    "\"\"\".strip()\n",
-    "\n",
-    "vocab = train_bpe_tokenizer(test_texts, num_merges=6, debug=True)\n",
-    "print(\"Vocabulary size:\", len(vocab))\n",
-    "print(\"Sample vocabulary:\", vocab[257:])"
+    "## Train BPE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18c5085f",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    "uv run cs336_basics/bpe.py --input_path=data/test.txt --vocab_size=270 --profile=true\n",
+    "uv run scalene cs336_basics/bpe.py --input_path=data/TinyStoriesV2-GPT4-valid.txt --vocab_size=300\n",
+    "uv run cs336_basics/bpe.py --input_path=data/owt_valid.txt --vocab_size=300\n",
+    "uv run cs336_basics/bpe.py --input_path=data/owt_train.txt --vocab_size=260\n",
+    "uv run scalene cs336_basics/bpe.py --input_path=data/owt_train.txt --vocab_size=260 --pre_tokens_path=data/output/owt_train-pre_tokens.pkl --profile=true\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "c45c2d9a",
+   "execution_count": null,
+   "id": "36074fe0",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using 51 processes for parallelization.\n",
-      "Chunk boundaries: [0, 27984, 56380, 84483, 112534, 140265, 167934, 196587, 223777, 251706, 279680, 309116, 336001, 363424, 391155, 419861, 447438, 475572, 502961, 531361, 558892, 586921, 614908, 643101, 670487, 699071, 726905, 754966, 782830, 810321, 838413, 866522, 894206, 922230, 950039, 978051, 1005989, 1033949, 1061798, 1090104, 1117981, 1145806, 1173275, 1201511, 1229230, 1257207, 1285071, 1313298, 1341654, 1369733, 1398182, 1424708]\n"
+      "Training BPE tokenizer on data/TinyStoriesV2-GPT4-valid.txt with vocab size 1000, special tokens ['<|endoftext|>']...\n",
+      "Using 64 processes for parallelizing pre-tokenization.\n",
+      "Pre-tokenization took 0.93 seconds. Found 13111 unique tokens.\n",
+      "Starting BPE training with 743 merges.\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9cd079f60a5a4fc393fd07caf9d6e2aa",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training BPE:   0%|          | 0/743 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving vocabulary and merges to data/output/TinyStoriesV2-GPT4-valid-output.pkl...\n",
+      "Vocab size: 1000\n",
+      "Number of merges: 743\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(b' ', b't'),\n",
+       " (b'h', b'e'),\n",
+       " (b' ', b'a'),\n",
+       " (b' ', b's'),\n",
+       " (b' ', b'w'),\n",
+       " (b' t', b'he'),\n",
+       " (b'n', b'd'),\n",
+       " (b'e', b'd'),\n",
+       " (b' ', b'b'),\n",
+       " (b' t', b'o')]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "import os\n",
-    "from typing import BinaryIO\n",
+    "vocab_size = 10_000\n",
+    "vocab_size = 32_000\n",
+    "vocab_size = 300\n",
+    "name = \"TinyStoriesV2-GPT4-valid\"\n",
+    "# name = \"TinyStoriesV2-GPT4-train\"\n",
+    "# name = \"owt_train.txt\"\n",
     "\n",
+    "vocab, merges = train_bpe_tokenizer(\n",
+    "    input_path=f\"data/{name}.txt\",\n",
+    "    vocab_size=vocab_size,\n",
+    "    special_tokens=[\"<|endoftext|>\"],\n",
+    "    output_path=\"data/output\",\n",
+    ")\n",
     "\n",
-    "def find_chunk_boundaries(\n",
-    "    file: BinaryIO, desired_num_chunks: int, split_special_token: bytes\n",
-    ") -> list[int]:\n",
-    "    \"\"\"\n",
-    "    Chunk the file into parts that can be counted independently.\n",
-    "    May return fewer chunks if the boundaries end up overlapping.\n",
-    "    \"\"\"\n",
-    "    assert isinstance(split_special_token, bytes), \"Must represent special token as a bytestring\"\n",
-    "\n",
-    "    # Get total file size in bytes\n",
-    "    file.seek(0, os.SEEK_END)\n",
-    "    file_size = file.tell()\n",
-    "    file.seek(0)\n",
-    "\n",
-    "    chunk_size = file_size // desired_num_chunks\n",
-    "\n",
-    "    # Initial guesses for chunk boundary locations, uniformly spaced\n",
-    "    # Chunks start on previous index, don't include last index\n",
-    "    chunk_boundaries = [i * chunk_size for i in range(desired_num_chunks + 1)]\n",
-    "    chunk_boundaries[-1] = file_size\n",
-    "\n",
-    "    mini_chunk_size = 4096  # Read ahead by 4k bytes at a time\n",
-    "\n",
-    "    for bi in range(1, len(chunk_boundaries) - 1):\n",
-    "        initial_position = chunk_boundaries[bi]\n",
-    "        file.seek(initial_position)  # Start at boundary guess\n",
-    "        while True:\n",
-    "            mini_chunk = file.read(mini_chunk_size)  # Read a mini chunk\n",
-    "\n",
-    "            # If EOF, this boundary should be at the end of the file\n",
-    "            if mini_chunk == b\"\":\n",
-    "                chunk_boundaries[bi] = file_size\n",
-    "                break\n",
-    "\n",
-    "            # Find the special token in the mini chunk\n",
-    "            found_at = mini_chunk.find(split_special_token)\n",
-    "            if found_at != -1:\n",
-    "                chunk_boundaries[bi] = initial_position + found_at\n",
-    "                break\n",
-    "            initial_position += mini_chunk_size\n",
-    "\n",
-    "    # Make sure all boundaries are unique, but might be fewer than desired_num_chunks\n",
-    "    return sorted(set(chunk_boundaries))\n",
-    "\n",
-    "\n",
-    "## Usage\n",
-    "with open(\"data/TinyStoriesV2-GPT4-train.10k.txt\", \"rb\") as f:\n",
-    "    num_processes = int(os.cpu_count() * 0.8)\n",
-    "    print(f\"Using {num_processes} processes for parallelization.\")\n",
-    "    boundaries = find_chunk_boundaries(f, num_processes, \"<|endoftext|>\".encode(\"utf-8\"))\n",
-    "\n",
-    "    # # The following is a serial implementation, but you can parallelize this\n",
-    "    # # by sending each start/end pair to a set of processes.\n",
-    "    # for start, end in zip(boundaries[:-1], boundaries[1:]):\n",
-    "    #     f.seek(start)\n",
-    "    #     chunk = f.read(end - start).decode(\"utf-8\", errors=\"ignore\")\n",
-    "    #     # Run pre-tokenization on your chunk and store the counts for each pre-token\n",
-    "\n",
-    "    print(\"Chunk boundaries:\", boundaries)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f71dd63e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def split_by_special_token(\n",
-    "    chunk: str, special_tokens: list[str] = [\"<|endoftext|>\"]  # Default special token\n",
-    ") -> list[str]:\n",
-    "    pattern = \"|\".join(re.escape(token) for token in special_tokens)\n",
-    "    return re.split(pattern, chunk)"
+    "print(f\"Vocab size: {len(vocab)}\")\n",
+    "print(f\"Number of merges: {len(merges)}\")\n",
+    "display(merges[:10])"
    ]
   },
   {
