--- a/repl.ipynb
+++ b/repl.ipynb
@@ -308,11 +308,12 @@
    "metadata": {},
    "source": [
     "```bash\n",
-    "uv run cs336_basics/bpe.py --input_path=data/test.txt --vocab_size=270 --profile=true\n",
-    "uv run scalene cs336_basics/bpe.py --input_path=data/TinyStoriesV2-GPT4-valid.txt --vocab_size=300\n",
+    "uv run cs336_basics/bpe.py --input_path=data/test.txt --vocab_size=270\n",
+    "uv run cs336_basics/bpe.py --input_path=data/TinyStoriesV2-GPT4-valid.txt --vocab_size=300\n",
     "uv run cs336_basics/bpe.py --input_path=data/owt_valid.txt --vocab_size=300\n",
     "uv run cs336_basics/bpe.py --input_path=data/owt_train.txt --vocab_size=260\n",
     "uv run scalene cs336_basics/bpe.py --input_path=data/owt_train.txt --vocab_size=260 --pre_tokens_path=data/output/owt_train-pre_tokens.pkl --profile=true\n",
+    "uv run cs336_basics/bpe.py --input_path=data/owt_train.txt --vocab_size=300 --pre_tokens_path=data/output/owt_train-pre_tokens.pkl\n",
     "```"
    ]
   },
