bpe optim wip bug

--- a/repl.ipynb
+++ b/repl.ipynb
@@ -10,12 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9e5b10b2",
    "metadata": {},
    "outputs": [],
    "source": [
     "from cs336_basics.bpe import train_bpe_tokenizer\n",
+    "from cs336_basics.bpe_optim import train_bpe_tokenizer_optim\n",
     "from cs336_basics.io_utils import save_pickle, load_pickle\n",
     "\n",
     "%load_ext autoreload\n",
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5fc140d9",
    "metadata": {},
    "outputs": [
@@ -34,7 +35,7 @@
        "64"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +300,19 @@
    "id": "e889e740",
    "metadata": {},
    "source": [
-    "## Train BPE"
+    "# Train BPE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb09e77e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print((b\"as\", b\"t\") > (b\" .\", b\"..\"))\n",
+    "a = b\"as\" + b\"t\"\n",
+    "b = b\" .\" + b\"..\""
    ]
   },
   {
@@ -308,21 +321,22 @@
    "metadata": {},
    "source": [
     "```bash\n",
+    "# test / profile\n",
     "uv run cs336_basics/bpe.py --input_path=data/test.txt --vocab_size=270\n",
     "uv run cs336_basics/bpe.py --input_path=data/TinyStoriesV2-GPT4-valid.txt --vocab_size=300\n",
     "uv run cs336_basics/bpe.py --input_path=data/owt_valid.txt --vocab_size=300\n",
     "uv run cs336_basics/bpe.py --input_path=data/owt_train.txt --vocab_size=260\n",
-    "uv run scalene cs336_basics/bpe.py --input_path=data/owt_train.txt --vocab_size=260 --pre_tokens_path=data/output/owt_train-pre_tokens.pkl --profile=true\n",
-    "uv run cs336_basics/bpe.py --input_path=data/owt_train.txt --vocab_size=300 --pre_tokens_path=data/output/owt_train-pre_tokens.pkl\n",
+    "uv run scalene cs336_basics/bpe.py --input_path=data/owt_train.txt --vocab_size=300 --output_dir=data/test --pre_tokens_path=data/output/owt_train-pre_tokens.pkl --profile=true\n",
     "\n",
-    "\n",
+    "# production\n",
+    "uv run cs336_basics/bpe.py --input_path=data/TinyStoriesV2-GPT4-train.txt --vocab_size=10000\n",
     "uv run cs336_basics/bpe.py --input_path=data/owt_train.txt --vocab_size=32000 --pre_tokens_path=data/output/owt_train-pre_tokens.pkl\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "36074fe0",
    "metadata": {},
    "outputs": [
@@ -330,21 +344,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training BPE tokenizer on data/TinyStoriesV2-GPT4-valid.txt with vocab size 1000, special tokens ['<|endoftext|>']...\n",
-      "Using 64 processes for parallelizing pre-tokenization.\n",
-      "Pre-tokenization took 0.93 seconds. Found 13111 unique tokens.\n",
-      "Starting BPE training with 743 merges.\n"
+      "Training BPE tokenizer on data/test.txt with vocab size 267, special tokens ['<|endoftext|>']...\n",
+      "Pre-tokenizing input data...\n",
+      "Chunking file of size 95 bytes into 1 chunks of size 67108864 bytes each.\n",
+      "Using 60 processes for parallelizing pre-tokenization of 1 chunks.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9cd079f60a5a4fc393fd07caf9d6e2aa",
+       "model_id": "e5f2a9923cda48a7a29d4a445b2e86d6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Training BPE:   0%|          | 0/743 [00:00<?, ?it/s]"
+       "Pre-tokenizing:   0%|          | 0/1 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -354,24 +368,91 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving vocabulary and merges to data/output/TinyStoriesV2-GPT4-valid-output.pkl...\n",
-      "Vocab size: 1000\n",
-      "Number of merges: 743\n"
+      "Pre-tokenization took 0.19 seconds. Found 8 unique tokens.\n",
+      "Pre-tokens saved to data/test/test-pre_tokens.pkl.\n",
+      "Unique pre-tokens: 8\n",
+      "First 10 unique pre-tokens: ['\\n', ' low', ' lower', ' newest', ' widest', 'low', 'lower', 'newest']\n",
+      "Last 10 unique pre-tokens: ['\\n', ' low', ' lower', ' newest', ' widest', 'low', 'lower', 'newest']\n",
+      "Random 10 unique pre-tokens: ['\\n', ' low', ' lower', ' newest', ' widest', 'low', 'lower', 'newest']\n",
+      "Starting BPE training with 10 merges.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b712d90071b8466398d1daa6a2765171",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training BPE:   0%|          | 0/10 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---\n",
+      "Merge 1/10: (b's', b't')\n",
+      "Current pairs:\n",
+      "[((b's', b't'), 9), ((b'e', b's'), 9), ((b'w', b'e'), 8), ((b'o', b'w'), 7), ((b'l', b'o'), 7), ((b'n', b'e'), 6), ((b'e', b'w'), 6), ((b' ', b'n'), 5), ((b' ', b'l'), 5), ((b'w', b'i'), 3)]\n",
+      "---\n",
+      "Merge 2/10: (b'e', b'st')\n",
+      "Current pairs:\n",
+      "[((b'e', b'st'), 9), ((b'w', b'e'), 8), ((b'o', b'w'), 7), ((b'l', b'o'), 7), ((b'n', b'e'), 6), ((b'e', b'w'), 6), ((b' ', b'n'), 5), ((b' ', b'l'), 5), ((b'w', b'i'), 3), ((b'i', b'd'), 3)]\n",
+      "---\n",
+      "Merge 3/10: (b'o', b'w')\n",
+      "Current pairs:\n",
+      "[((b'o', b'w'), 7), ((b'l', b'o'), 7), ((b'w', b'est'), 6), ((b'n', b'e'), 6), ((b'e', b'w'), 6), ((b' ', b'n'), 5), ((b' ', b'l'), 5), ((b'w', b'i'), 3), ((b'i', b'd'), 3), ((b'd', b'est'), 3)]\n",
+      "---\n",
+      "Merge 4/10: (b'l', b'ow')\n",
+      "Current pairs:\n",
+      "[((b'l', b'ow'), 7), ((b'w', b'est'), 6), ((b'n', b'e'), 6), ((b'e', b'w'), 6), ((b' ', b'n'), 5), ((b' ', b'l'), 5), ((b'w', b'i'), 3), ((b'i', b'd'), 3), ((b'd', b'est'), 3), ((b' ', b'w'), 3)]\n",
+      "---\n",
+      "Merge 5/10: (b'w', b'est')\n",
+      "Current pairs:\n",
+      "[((b'w', b'est'), 6), ((b'n', b'e'), 6), ((b'e', b'w'), 6), ((b' ', b'n'), 5), ((b' ', b'low'), 5), ((b'w', b'i'), 3), ((b'i', b'd'), 3), ((b'd', b'est'), 3), ((b' ', b'w'), 3), ((b'low', b'e'), 2)]\n",
+      "---\n",
+      "Merge 6/10: (b'n', b'e')\n",
+      "Current pairs:\n",
+      "[((b'n', b'e'), 6), ((b'e', b'west'), 6), ((b' ', b'n'), 5), ((b' ', b'low'), 5), ((b'w', b'i'), 3), ((b'i', b'd'), 3), ((b'd', b'est'), 3), ((b' ', b'w'), 3), ((b'low', b'e'), 2), ((b'e', b'r'), 2)]\n",
+      "---\n",
+      "Merge 7/10: (b'ne', b'west')\n",
+      "Current pairs:\n",
+      "[((b'ne', b'west'), 6), ((b' ', b'ne'), 5), ((b' ', b'low'), 5), ((b'w', b'i'), 3), ((b'i', b'd'), 3), ((b'd', b'est'), 3), ((b' ', b'w'), 3), ((b'low', b'e'), 2), ((b'e', b'r'), 2)]\n",
+      "---\n",
+      "Merge 8/10: (b' ', b'newest')\n",
+      "Current pairs:\n",
+      "[((b' ', b'newest'), 5), ((b' ', b'low'), 5), ((b'w', b'i'), 3), ((b'i', b'd'), 3), ((b'd', b'est'), 3), ((b' ', b'w'), 3), ((b'low', b'e'), 2), ((b'e', b'r'), 2)]\n",
+      "---\n",
+      "Merge 9/10: (b' ', b'low')\n",
+      "Current pairs:\n",
+      "[((b' ', b'low'), 5), ((b'w', b'i'), 3), ((b'i', b'd'), 3), ((b'd', b'est'), 3), ((b' ', b'w'), 3), ((b'low', b'e'), 2), ((b'e', b'r'), 2)]\n",
+      "---\n",
+      "Merge 10/10: (b'w', b'i')\n",
+      "Current pairs:\n",
+      "[((b'w', b'i'), 3), ((b'i', b'd'), 3), ((b'd', b'est'), 3), ((b' ', b'w'), 3), ((b'e', b'r'), 2), ((b'low', b'e'), 1), ((b' low', b'e'), 1)]\n",
+      "Saving vocabulary and merges to data/test/test-bpe.pkl...\n",
+      "Vocab size: 257\n",
+      "Number of merges: 10\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[(b' ', b't'),\n",
-       " (b'h', b'e'),\n",
-       " (b' ', b'a'),\n",
-       " (b' ', b's'),\n",
-       " (b' ', b'w'),\n",
-       " (b' t', b'he'),\n",
-       " (b'n', b'd'),\n",
-       " (b'e', b'd'),\n",
-       " (b' ', b'b'),\n",
-       " (b' t', b'o')]"
+       "[(b's', b't'),\n",
+       " (b'e', b'st'),\n",
+       " (b'o', b'w'),\n",
+       " (b'l', b'ow'),\n",
+       " (b'w', b'est'),\n",
+       " (b'n', b'e'),\n",
+       " (b'ne', b'west'),\n",
+       " (b' ', b'newest'),\n",
+       " (b' ', b'low'),\n",
+       " (b'w', b'i')]"
       ]
      },
      "metadata": {},
@@ -384,13 +465,15 @@
     "vocab_size = 300\n",
     "name = \"TinyStoriesV2-GPT4-valid\"\n",
     "# name = \"TinyStoriesV2-GPT4-train\"\n",
-    "# name = \"owt_train.txt\"\n",
+    "# name = \"owt_train\"\n",
+    "name = \"test\"\n",
     "\n",
-    "vocab, merges = train_bpe_tokenizer(\n",
+    "vocab, merges = train_bpe_tokenizer_optim(\n",
     "    input_path=f\"data/{name}.txt\",\n",
-    "    vocab_size=vocab_size,\n",
+    "    vocab_size=257 + 10,\n",
     "    special_tokens=[\"<|endoftext|>\"],\n",
-    "    output_path=\"data/output\",\n",
+    "    output_dir=\"data/test\",\n",
+    "    debug=True,\n",
     ")\n",
     "\n",
     "print(f\"Vocab size: {len(vocab)}\")\n",
@@ -619,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "0affbc24",
    "metadata": {},
    "outputs": [
@@ -627,15 +710,14 @@
      "data": {
       "text/plain": [
        "['some text ',\n",
-       " '<|endoftext|>',\n",
-       " '<|endoftext|>',\n",
+       " '<|endoftext|><|endoftext|>',\n",
        " ' another text',\n",
        " '<|endoftext|>',\n",
        " ' ',\n",
        " '<|endoftext|>']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
