--- a/repl.ipynb
+++ b/repl.ipynb
@@ -824,6 +824,65 @@
    "source": [
     "tuple([0])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a046a74a",
+   "metadata": {},
+   "source": [
+    "# Module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92134d81",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pytorch'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpytorch\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mnn\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnn\u001b[39;00m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'pytorch'"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from einops import einsum\n",
+    "\n",
+    "\n",
+    "class Linear(nn.Module):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        in_features: int,\n",
+    "        out_features: int,\n",
+    "        device: torch.device | None = None,\n",
+    "        dtype: torch.dtype | None = None,\n",
+    "    ):\n",
+    "        super().__init__()\n",
+    "        self.in_features = in_features\n",
+    "        self.out_features = out_features\n",
+    "        std = math.sqrt(2.0 / (in_features + out_features))\n",
+    "        self.weight = nn.Parameter(\n",
+    "            torch.empty(out_features, in_features, device=device, dtype=dtype)\n",
+    "        )\n",
+    "        nn.init.trunc_normal_(\n",
+    "            self.weight,\n",
+    "            std=std,\n",
+    "            a=-3 * std,\n",
+    "            b=3 * std,\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
+    "        return einsum(x, self.weight, \"... d_in, d_out d_in -> ... d_out\")"
+   ]
   }
  ],
  "metadata": {
