--- a/repl.ipynb
+++ b/repl.ipynb
@@ -10,14 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9e5b10b2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cs336_basics.bpe import train_bpe_tokenizer\n",
-    "from cs336_basics.bpe_optim import train_bpe_tokenizer_optim\n",
-    "from cs336_basics.io_utils import save_pickle, load_pickle\n",
+    "from cs336_basics.tokenizer.bpe import train_bpe_tokenizer\n",
+    "from cs336_basics.tokenizer.bpe_optim import train_bpe_tokenizer_optim\n",
+    "from cs336_basics.utils import save_pickle, load_pickle\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -840,48 +840,78 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pytorch'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpytorch\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mnn\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnn\u001b[39;00m\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'pytorch'"
-     ]
+     "data": {
+      "text/plain": [
+       "OrderedDict([('fc1.weight',\n",
+       "              tensor([[-4.8529e-01,  2.6964e-01, -9.3886e-02, -9.0110e-02,  3.7214e-01,\n",
+       "                       -8.5903e-02, -1.6224e-01, -6.9695e-02,  3.8484e-01,  5.7567e-01,\n",
+       "                        5.5860e-02, -2.9090e-02, -3.8228e-01,  2.7765e-01, -1.4191e-01,\n",
+       "                       -2.8157e-01,  3.6442e-02,  3.6201e-01,  1.3592e-01,  5.2417e-01],\n",
+       "                      [ 2.8679e-01,  2.6349e-01, -2.2492e-01, -1.6420e-01,  2.7580e-01,\n",
+       "                        5.5705e-02, -2.6432e-01,  6.8026e-02, -2.8690e-02, -2.4032e-02,\n",
+       "                        3.6914e-03, -6.3540e-02,  1.0283e-04,  9.1783e-02,  2.2163e-01,\n",
+       "                        8.8964e-02, -1.1619e-01, -1.9740e-01,  7.6988e-02, -4.1063e-01],\n",
+       "                      [-3.0441e-01,  1.7776e-01,  1.6846e-01,  6.0462e-01, -2.5959e-01,\n",
+       "                        2.7505e-01, -5.2852e-01, -3.4432e-01,  2.8347e-01, -1.1309e-01,\n",
+       "                       -5.5541e-02,  2.3649e-01,  7.9557e-02,  6.8420e-01, -1.9286e-01,\n",
+       "                        1.2384e-01,  2.6129e-01, -3.1309e-01, -1.8562e-02,  3.0621e-01],\n",
+       "                      [ 1.0690e-01,  2.0866e-01, -2.3433e-01, -1.9442e-02,  4.0275e-01,\n",
+       "                        2.8823e-01, -2.7568e-02, -7.3719e-02, -1.2860e-01,  6.2770e-02,\n",
+       "                        1.0868e-01,  2.1072e-01, -1.9919e-01, -4.1084e-01, -3.7275e-01,\n",
+       "                       -2.6746e-01, -6.7860e-02,  1.1613e-01,  8.2715e-02, -3.5957e-01],\n",
+       "                      [ 5.9840e-02,  7.6832e-02, -4.4755e-01, -6.5624e-01,  7.4615e-03,\n",
+       "                       -1.2729e-01, -2.5106e-01,  6.6763e-01, -6.9866e-01,  6.4044e-02,\n",
+       "                       -4.4586e-02, -6.5706e-02, -2.5661e-01, -5.2745e-01,  3.7660e-01,\n",
+       "                       -2.2321e-02,  4.8739e-01, -3.6195e-02,  3.1021e-01,  5.8044e-02]])),\n",
+       "             ('fc2.weight',\n",
+       "              tensor([[-0.0385, -0.1934,  0.0978, -0.2619, -0.1381],\n",
+       "                      [-0.5289,  0.2469, -0.6085,  0.1976,  0.6620],\n",
+       "                      [-0.0352, -0.0616,  0.0273,  0.4919, -0.2409],\n",
+       "                      [ 0.1483, -0.3140, -0.0990,  0.4882, -0.0212],\n",
+       "                      [ 0.0429,  0.0914,  0.1202, -0.0896, -0.4474],\n",
+       "                      [ 0.0243, -0.4912, -0.0962,  0.3576,  0.1709],\n",
+       "                      [ 0.5985,  0.1138, -0.4801,  0.1144, -0.1587],\n",
+       "                      [ 0.0151,  0.1068,  0.0192, -0.0749, -0.5878],\n",
+       "                      [-0.1315,  0.3725, -0.2751,  0.1196,  0.1610],\n",
+       "                      [-0.2809,  0.2354, -0.2845, -0.0015, -0.1084],\n",
+       "                      [-0.4323,  0.2186,  0.2302, -0.6999,  0.1408],\n",
+       "                      [ 0.5436,  0.1901,  0.0558,  0.1743, -0.0605],\n",
+       "                      [ 0.1494,  0.2107,  0.0607,  0.1194, -0.0334],\n",
+       "                      [ 0.0849, -0.3901,  0.0666,  0.2275,  0.2132],\n",
+       "                      [-0.1969, -0.3043, -0.6479,  0.4155,  0.1654],\n",
+       "                      [-0.2131, -0.0042,  0.1059, -0.1516, -0.3541],\n",
+       "                      [ 0.1711, -0.5155,  0.6119,  0.6180, -0.2358],\n",
+       "                      [-0.4554,  0.1952,  0.6079, -0.2815, -0.4018],\n",
+       "                      [ 0.0129, -0.1458, -0.0344, -0.0724, -0.6445],\n",
+       "                      [-0.1810, -0.2058, -0.1873,  0.1930,  0.0884]])),\n",
+       "             ('fc3.weight',\n",
+       "              tensor([[-0.1750,  0.0971,  0.0761,  0.0482, -0.6799, -0.5692,  0.0911,  0.1610,\n",
+       "                       -0.2135, -0.0511, -0.3297, -0.2657, -0.1494,  0.2699, -0.1743, -0.1223,\n",
+       "                       -0.2771,  0.0205, -0.2023, -0.0600],\n",
+       "                      [-0.2412,  0.0088,  0.1568, -0.2503, -0.7378,  0.2836,  0.3339, -0.5158,\n",
+       "                       -0.3562,  0.2278,  0.0143, -0.2090, -0.1547, -0.1264,  0.0497, -0.7350,\n",
+       "                        0.3080, -0.1599, -0.6907, -0.4788],\n",
+       "                      [-0.2270, -0.0842, -0.0702,  0.0209, -0.1592, -0.3454, -0.2198,  0.4561,\n",
+       "                       -0.1657, -0.3517, -0.5264,  0.1053, -0.2506, -0.2724, -0.3547, -0.6064,\n",
+       "                        0.2973,  0.0838, -0.0115, -0.3904],\n",
+       "                      [-0.0549, -0.2248, -0.2030,  0.1273,  0.1327,  0.2441, -0.4228, -0.2286,\n",
+       "                       -0.1304,  0.0845,  0.3802,  0.1125, -0.4648, -0.1071,  0.0721,  0.0788,\n",
+       "                        0.6674,  0.3592, -0.3883, -0.0479],\n",
+       "                      [ 0.3873, -0.1248, -0.0382, -0.1150, -0.0789,  0.0987, -0.2014,  0.0407,\n",
+       "                        0.0288,  0.1926, -0.4739, -0.2145,  0.1803, -0.2898, -0.3366, -0.2805,\n",
+       "                        0.0230, -0.1207,  0.3107, -0.3810]]))])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import math\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "from einops import einsum\n",
+    "from cs336_basics.modules import SwiGLU\n",
     "\n",
-    "\n",
-    "class Linear(nn.Module):\n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        in_features: int,\n",
-    "        out_features: int,\n",
-    "        device: torch.device | None = None,\n",
-    "        dtype: torch.dtype | None = None,\n",
-    "    ):\n",
-    "        super().__init__()\n",
-    "        self.in_features = in_features\n",
-    "        self.out_features = out_features\n",
-    "        std = math.sqrt(2.0 / (in_features + out_features))\n",
-    "        self.weight = nn.Parameter(\n",
-    "            torch.empty(out_features, in_features, device=device, dtype=dtype)\n",
-    "        )\n",
-    "        nn.init.trunc_normal_(\n",
-    "            self.weight,\n",
-    "            std=std,\n",
-    "            a=-3 * std,\n",
-    "            b=3 * std,\n",
-    "        )\n",
-    "\n",
-    "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
-    "        return einsum(x, self.weight, \"... d_in, d_out d_in -> ... d_out\")"
+    "m = SwiGLU(5, 20)\n",
+    "m.state_dict()"
    ]
   }
  ],
