--- a/repl.ipynb
+++ b/repl.ipynb
@@ -836,6 +836,117 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "22f35a04",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[ 1.1270e+21,  4.5590e-41],\n",
+       "         [ 1.1270e+21,  4.5590e-41],\n",
+       "         [ 2.0208e+23,  3.0767e-41],\n",
+       "         [ 2.0207e+23,  3.0767e-41]],\n",
+       "\n",
+       "        [[ 0.0000e+00,  0.0000e+00],\n",
+       "         [ 1.9828e+23,  3.0767e-41],\n",
+       "         [ 2.1456e+22,  3.0767e-41],\n",
+       "         [-5.5259e+03,  4.5587e-41]],\n",
+       "\n",
+       "        [[ 0.0000e+00,  0.0000e+00],\n",
+       "         [ 0.0000e+00,  0.0000e+00],\n",
+       "         [ 0.0000e+00,  0.0000e+00],\n",
+       "         [ 0.0000e+00,  0.0000e+00]],\n",
+       "\n",
+       "        [[ 0.0000e+00,  0.0000e+00],\n",
+       "         [ 0.0000e+00,  0.0000e+00],\n",
+       "         [ 1.4013e-45,  0.0000e+00],\n",
+       "         [ 0.0000e+00,  0.0000e+00]],\n",
+       "\n",
+       "        [[ 0.0000e+00,  0.0000e+00],\n",
+       "         [ 0.0000e+00,  0.0000e+00],\n",
+       "         [ 0.0000e+00,  0.0000e+00],\n",
+       "         [ 9.8091e-45,  0.0000e+00]],\n",
+       "\n",
+       "        [[ 1.4013e-45,  0.0000e+00],\n",
+       "         [-1.7014e+38,  1.1515e-40],\n",
+       "         [ 4.5919e-41,  4.1478e-43],\n",
+       "         [ 3.8255e-43,  0.0000e+00]],\n",
+       "\n",
+       "        [[ 1.1269e+21,  4.5590e-41],\n",
+       "         [ 1.1269e+21,  4.5590e-41],\n",
+       "         [ 1.9733e+23,  3.0767e-41],\n",
+       "         [ 2.0204e+23,  3.0767e-41]],\n",
+       "\n",
+       "        [[ 1.9925e+23,  3.0767e-41],\n",
+       "         [ 2.1456e+22,  3.0767e-41],\n",
+       "         [-5.5252e+03,  4.5587e-41],\n",
+       "         [ 1.4013e-45,  2.1019e-44]],\n",
+       "\n",
+       "        [[ 1.4013e-45, -1.7014e+38],\n",
+       "         [ 1.1515e-40,  4.5919e-41],\n",
+       "         [ 4.1478e-43,  2.0319e-43],\n",
+       "         [ 1.1269e+21,  4.5590e-41]],\n",
+       "\n",
+       "        [[ 1.1269e+21,  4.5590e-41],\n",
+       "         [ 1.9977e+23,  3.0767e-41],\n",
+       "         [ 2.0007e+23,  3.0767e-41],\n",
+       "         [ 1.9878e+23,  3.0767e-41]]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([5, 2])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 1,  2],\n",
+       "        [ 3,  4],\n",
+       "        [ 5,  6],\n",
+       "        [ 7,  8],\n",
+       "        [ 9, 10]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "index 10 is out of bounds for dimension 0 with size 10",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mIndexError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      6\u001b[39m display(pos.shape)\n\u001b[32m      7\u001b[39m display(pos)\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m res = \u001b[43mcache\u001b[49m\u001b[43m[\u001b[49m\u001b[43mpos\u001b[49m\u001b[43m]\u001b[49m\n\u001b[32m      9\u001b[39m \u001b[38;5;28mprint\u001b[39m(res.shape)\n\u001b[32m     10\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m res.shape == pos.shape + cache.shape[\u001b[32m1\u001b[39m:]\n",
+      "\u001b[31mIndexError\u001b[39m: index 10 is out of bounds for dimension 0 with size 10"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "cache = torch.empty(10, 4, 2)\n",
+    "display(cache)\n",
+    "pos = torch.tensor([[1, 2], [3, 4], [5, 6], [7, 8], [9, 2]])\n",
+    "display(pos.shape)\n",
+    "display(pos)\n",
+    "res = cache[pos]\n",
+    "print(res.shape)\n",
+    "assert res.shape == pos.shape + cache.shape[1:]\n",
+    "display(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "92134d81",
    "metadata": {},
    "outputs": [
