--- a/repl.ipynb
+++ b/repl.ipynb
@@ -838,34 +838,7 @@
    "execution_count": null,
    "id": "22f35a04",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[[ 1.,  2.],\n",
-      "         [ 3.,  4.]],\n",
-      "\n",
-      "        [[ 5.,  6.],\n",
-      "         [ 7.,  8.]],\n",
-      "\n",
-      "        [[ 9., 10.],\n",
-      "         [11., 12.]]])\n",
-      "torch.Size([3, 2, 2])\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "index 3 is out of bounds for dimension 0 with size 3",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mIndexError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 13\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;28mprint\u001b[39m(x.shape)\n\u001b[32m      7\u001b[39m index = torch.tensor(\n\u001b[32m      8\u001b[39m     [\n\u001b[32m      9\u001b[39m         [\u001b[32m0\u001b[39m, \u001b[32m1\u001b[39m],\n\u001b[32m     10\u001b[39m         [\u001b[32m2\u001b[39m, \u001b[32m3\u001b[39m],\n\u001b[32m     11\u001b[39m     ]\n\u001b[32m     12\u001b[39m )\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m \u001b[43mx\u001b[49m\u001b[43m[\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m]\u001b[49m\n",
-      "\u001b[31mIndexError\u001b[39m: index 3 is out of bounds for dimension 0 with size 3"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "\n",
@@ -880,6 +853,40 @@
     "    ]\n",
     ")\n",
     "x[index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "edb9e9d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 3])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "torch.return_types.max(\n",
+       "values=tensor([[3.],\n",
+       "        [5.]]),\n",
+       "indices=tensor([[2],\n",
+       "        [2]]))"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = torch.tensor([[[1.0, 2.0, 3.0], [3.0, 4.0, 5.0]], [[5.0, 2.0, 3.0], [3.0, 10.0, 5.0]]])\n",
+    "print(a.shape)\n",
+    "a.max(dim=1, keepdim=True)"
    ]
   },
   {
