--- a/repl.ipynb
+++ b/repl.ipynb
@@ -858,6 +858,72 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6c895aa5",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "can't use starred expression here (3199806786.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[26]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31m*((1,)*3)\u001b[39m\n    ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m can't use starred expression here\n"
+     ]
+    }
+   ],
+   "source": [
+    "* ((1,) * 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "a3962cfa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 1., 1.],\n",
+       "        [0., 1., 1.],\n",
+       "        [0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.triu(torch.ones(3, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7cf1f0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0., 1., 1.],\n",
+       "        [0., 0., 1.],\n",
+       "        [0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seq_len = 3\n",
+    "torch.triu(torch.ones(seq_len, seq_len), diagonal=1).bool()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "edb9e9d1",
    "metadata": {},
    "outputs": [
@@ -865,20 +931,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([2, 3])\n"
+      "torch.Size([2, 2, 3])\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "torch.return_types.max(\n",
-       "values=tensor([[3.],\n",
-       "        [5.]]),\n",
-       "indices=tensor([[2],\n",
-       "        [2]]))"
+       "values=tensor([[[ 3.,  4.,  5.]],\n",
+       "\n",
+       "        [[ 5., 10.,  5.]]]),\n",
+       "indices=tensor([[[1, 1, 1]],\n",
+       "\n",
+       "        [[0, 1, 1]]]))"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
