--- a/repl.ipynb
+++ b/repl.ipynb
@@ -857,25 +857,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6c895aa5",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "can't use starred expression here (3199806786.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[26]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31m*((1,)*3)\u001b[39m\n    ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m can't use starred expression here\n"
-     ]
-    }
-   ],
-   "source": [
-    "* ((1,) * 3)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 27,
    "id": "a3962cfa",
    "metadata": {},
@@ -899,19 +880,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "a7cf1f0c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0., 1., 1.],\n",
-       "        [0., 0., 1.],\n",
-       "        [0., 0., 0.]])"
+       "tensor([[False,  True,  True],\n",
+       "        [False, False,  True],\n",
+       "        [False, False, False]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,6 +900,66 @@
    "source": [
     "seq_len = 3\n",
     "torch.triu(torch.ones(seq_len, seq_len), diagonal=1).bool()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83ab237e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = torch.randn(2, 3, 3)\n",
+    "a, b = x\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "ea554051",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[[-0.6856, -0.0532, -0.8820],\n",
+       "          [ 0.4296, -2.4303, -0.6851],\n",
+       "          [ 0.3202,  0.0465,  0.0400]],\n",
+       "\n",
+       "         [[-0.9164, -0.2908,  0.1964],\n",
+       "          [-0.2993, -0.9805, -0.2158],\n",
+       "          [-0.1415,  0.8736, -0.9177]],\n",
+       "\n",
+       "         [[-0.4620, -0.2899,  0.5559],\n",
+       "          [ 1.4515, -0.1154,  0.0486],\n",
+       "          [-0.7578, -1.0880,  2.0468]]],\n",
+       "\n",
+       "\n",
+       "        [[[-1.5145, -0.1661, -0.1417],\n",
+       "          [-1.2118,  0.5992,  0.7080],\n",
+       "          [ 0.6102,  0.6058, -0.5511]],\n",
+       "\n",
+       "         [[-1.1255,  0.0776, -0.0150],\n",
+       "          [ 0.3767,  0.5303,  0.3664],\n",
+       "          [ 0.2656, -0.2135, -0.5753]],\n",
+       "\n",
+       "         [[-0.4318,  0.4830, -1.2669],\n",
+       "          [-0.7432, -2.6870,  0.0454],\n",
+       "          [-0.0705, -0.1499, -0.6054]]]])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from einops import rearrange\n",
+    "\n",
+    "x = torch.randn(2, 3, 3 * 3)  # Example tensor with shape (batch_size, seq_len, d_model)\n",
+    "rearrange(x, \"b s (a d) -> b s a d\", a=3)"
    ]
   },
   {
