--- a/repl.ipynb
+++ b/repl.ipynb
@@ -904,12 +904,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
+   "id": "379cca23",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(-0.1408)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = torch.randn(2, 4, 4)\n",
+    "a.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "id": "83ab237e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[ 0.2646, -0.6519, -1.3658],\n",
+      "         [ 0.1146, -0.7037, -1.3128],\n",
+      "         [-1.5099, -1.0640,  1.1832]],\n",
+      "\n",
+      "        [[-0.5693, -1.3840,  1.7440],\n",
+      "         [ 1.2142, -0.2596, -2.1845],\n",
+      "         [ 0.2056,  0.4397,  1.0110]]])\n",
+      "tensor([[ 0.2646, -0.6519, -1.3658],\n",
+      "        [ 0.1146, -0.7037, -1.3128],\n",
+      "        [-1.5099, -1.0640,  1.1832]])\n",
+      "tensor([[-0.5693, -1.3840,  1.7440],\n",
+      "        [ 1.2142, -0.2596, -2.1845],\n",
+      "        [ 0.2056,  0.4397,  1.0110]])\n"
+     ]
+    }
+   ],
    "source": [
     "x = torch.randn(2, 3, 3)\n",
+    "print(x)\n",
     "a, b = x\n",
     "print(a)\n",
     "print(b)"
